...
                  });
                },
              ),
              const SizedBox(width: 16),
              // Model Builder Title.
              const Text(
                'Model Builder: rpart',
                style: normalTextStyle,
              ),
            ],
          ),

          // Min Split, Max Depth, and Min Bucket.
...
    );
  }
}

// Enum for algorithm types.
enum AlgorithmType {
  traditional('Traditional'),
  conditional('Conditional');

  final String displayName;

  const AlgorithmType(this.displayName);
}

