...
final treeAlgorithmProvider =
    StateProvider<AlgorithmType>((ref) => AlgorithmType.traditional);

// Enum for algorithm types.

enum AlgorithmType {
  traditional('Traditional'),
  conditional('Conditional');

  final String displayName;

  const AlgorithmType(this.displayName);
}

